--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/d3": "^7.4.0",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "ngx-mat-timepicker": "^15.1.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
