--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/chartjs-plugin-dragdata/dist/chartjs-plugin-dragdata.min.js"
             ]
           },
           "configurations": {
