--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/d3": "^7.4.0",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "chart.js": "^4.2.1",
+    "chartjs-plugin-dragdata": "^2.2.5",
     "ngx-mat-timepicker": "^15.1.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -39,6 +41,7 @@
     "@angular-devkit/build-angular": "^15.2.1",
     "@angular/cli": "~15.2.1",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/chart.js": "^2.9.37",
     "@types/d3-scale": "^4.0.3",
     "@types/d3-shape": "^3.1.1",
     "@types/jasmine": "~4.3.0",
